polished project week 5
