# models/vehicle-model.js
@@ -1,30 +1,0 @@
-const mongoose = require("mongoose");
-
-const vehicleSchema = new mongoose.Schema(
-  {
-    userId: {
-      type: String,
-      required: true,
-      trim: true
-    },
-    make: {
-      type: String,
-      required: true,
-      trim: true
-    },
-    model: {
-      type: String,
-      required: true,
-      trim: true
-    },
-    year: {
-      type: Number,
-      required: true,
-      min: 1900,
-      max: new Date().getFullYear() + 1
-    }
-  },
-  { timestamps: true }
-);
-
-module.exports = mongoose.model("Vehicle", vehicleSchema);
